# duckc

./: .gitignore  CMakeLists.txt  README.md  buffer.c
include/duckc/: buffer.h  queue.h
tests/: CMakeLists.txt  buffer_test.cc  queue_test.cc  tree_test.cc
